; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libucl/src/extr_ucl_parser.c_ucl_lex_num_multiplier.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libucl/src/extr_ucl_parser.c_ucl_lex_num_multiplier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i8, i64, i64 }

@__const.ucl_lex_num_multiplier.multipliers = private unnamed_addr constant [3 x %struct.anon] [%struct.anon { i8 109, i64 1000000, i64 1048576 }, %struct.anon { i8 107, i64 1000, i64 1024 }, %struct.anon { i8 103, i64 1000000000, i64 1073741824 }], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8, i32)* @ucl_lex_num_multiplier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ucl_lex_num_multiplier(i8 zeroext %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  %6 = alloca [3 x %struct.anon], align 16
  %7 = alloca i32, align 4
  store i8 %0, i8* %4, align 1
  store i32 %1, i32* %5, align 4
  %8 = bitcast [3 x %struct.anon]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %8, i8* align 16 getelementptr inbounds ([3 x %struct.anon], [3 x %struct.anon]* @__const.ucl_lex_num_multiplier.multipliers, i32 0, i32 0, i32 0), i64 72, i1 false)
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %39, %2
  %10 = load i32, i32* %7, align 4
  %11 = icmp slt i32 %10, 3
  br i1 %11, label %12, label %42

12:                                               ; preds = %9
  %13 = load i8, i8* %4, align 1
  %14 = call signext i8 @tolower(i8 signext %13)
  %15 = sext i8 %14 to i32
  %16 = load i32, i32* %7, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* %6, i64 0, i64 %17
  %19 = getelementptr inbounds %struct.anon, %struct.anon* %18, i32 0, i32 0
  %20 = load i8, i8* %19, align 8
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %15, %21
  br i1 %22, label %23, label %38

23:                                               ; preds = %12
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %23
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* %6, i64 0, i64 %28
  %30 = getelementptr inbounds %struct.anon, %struct.anon* %29, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  store i64 %31, i64* %3, align 8
  br label %43

32:                                               ; preds = %23
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* %6, i64 0, i64 %34
  %36 = getelementptr inbounds %struct.anon, %struct.anon* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  store i64 %37, i64* %3, align 8
  br label %43

38:                                               ; preds = %12
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %7, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %7, align 4
  br label %9

42:                                               ; preds = %9
  store i64 1, i64* %3, align 8
  br label %43

43:                                               ; preds = %42, %32, %26
  %44 = load i64, i64* %3, align 8
  ret i64 %44
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local signext i8 @tolower(i8 signext) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
